--- a/style.css
+++ b/style.css
@@ -40,8 +40,9 @@ body {
 /* ---------------------------------------------------------------------------- */
 
 ._container {
-	max-width: 1015px;
+	max-width: 1016px;
 	padding: 0px 15px;
+	margin: 0px auto;
 }
 
 .wrapper {
@@ -50,7 +51,17 @@ body {
 	display: flex;
 	flex-direction: column;
 }
-
+._ibg {
+	position: relative;
+}
+._ibg img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 /* -----HEADER----------------------------------------------------------------------- */
 
 .header {
@@ -60,25 +71,91 @@ body {
 	top: 0;
 	z-index: 50;
 	min-height: 104px;
-	display: flex;
+	padding: 5px 0;
 }
 .header__container {
+	min-height: 104px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .header__logo {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 133%;
+	letter-spacing: 0.1px;
+	padding: 0px 132px 0px 0px;
+	color: inherit;
 }
 .header__menu {
 }
 .menu {
 }
 .menu__list {
+	display: flex;
+	flex-wrap: wrap;
 }
 .menu__item {
 }
+.menu__item:not(:last-child) {
+	margin: 0px 21px 0px 0px;
+}
 .menu__link {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	color: #737373;
 }
 
+/* ---------------------------------------------------------------------------- */
 .page {
+	flex: 1 1 auto;
 }
+.page__main-block {
+}
+/* ---------------------------------------------------------------------------- */
+.main-block {
+	position: relative;
+}
+.main-block__container {
+}
+
+.main-block__body {
+	padding: 184px 0px 191px 0px;
+	max-width: 400px;
+	position: relative;
+	z-index: 2;
+}
+.main-block__body > *:not(:last-child) {
+	margin: 0px 0px 35px 0px;
+}
+.main-block__title {
+	font-weight: 800;
+	font-size: 58px;
+	line-height: 138%;
+	letter-spacing: 0.2px;
+}
+.main-block__text {
+	font-size: 20px;
+	line-height: 150%;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
+.main-block__buttons {
+}
+.main-block__button {
+}
+.main-block__image {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+
+/* ---------------------------------------------------------------------------- */
+
 .footer {
 }
