--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .wrapper {
-	height: 100%;
+	min-height: 100%;
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
@@ -144,19 +144,29 @@ body {
 	color: #737373;
 }
 .main-block__buttons {
+	/* margin: -10px 0px; */
 }
 .main-block__button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-weight: bold;
-	font-size: 14px;
-	line-height: 28px;
-	/* identical to box height, or 200% */
-
+	line-height: 150%;
 	text-align: center;
 	letter-spacing: 0.2px;
-
-	/* secondary-color-1 */
-
 	color: #0d5c63;
+	min-height: 48px;
+	padding: 5px 36px;
+	border: 1px solid #0d5c63;
+	border-radius: 37px;
+	transition: all 0.3s ease 0s;
+	/* margin: 10px 0px; */
+}
+
+.main-block__button:hover {
+	background-color: #ff7b47;
+	border: 1px solid #ff7b47;
+	color: #fff;
 }
 .main-block__image {
 	position: absolute;
@@ -164,6 +174,14 @@ body {
 	height: 100%;
 	left: 0;
 	top: 0;
+}
+@media (min-width: 425px) {
+	.main-block__buttons {
+		display: flex;
+	}
+	.main-block__button:not(:last-child) {
+		margin: 0px 10px 0px 0px;
+	}
 }
 
 /* ---------------------------------------------------------------------------- */
