--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 /* ---------------------------------------------------------------------------- */
 
 ._container {
-	max-width: 1016px;
+	max-width: 1076px;
 	padding: 0px 15px;
 	margin: 0px auto;
 }
@@ -61,6 +61,25 @@ body {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.title-block {
+	text-align: center;
+}
+.title-block__title {
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 142%;
+	letter-spacing: 0.2px;
+}
+.title-block__title:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.title-block__subtitle {
+	font-size: 14px;
+	line-height: 143%;
+	letter-spacing: 0.2px;
+	color: #737373;
 }
 /* -----HEADER----------------------------------------------------------------------- */
 
@@ -142,6 +161,8 @@ body {
 	margin: -111px 0px 0px 0px;
 	position: relative;
 	z-index: 2;
+}
+.page__advantages {
 }
 /* ---------------------------------------------------------------------------- */
 .main-block {
@@ -301,7 +322,7 @@ body {
 }
 .item-services {
 	background-color: #fff;
-	padding: 35px 40px;
+	padding: 35px;
 	box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
 }
 .item-services:hover {
@@ -355,5 +376,54 @@ body {
 	}
 }
 /* ---------------------------------------------------------------------------- */
-.footer {
+
+.advantages {
+	margin: 80px 0;
 }
+.advantages__container {
+}
+.advantages__title-block {
+	margin: 0px 0px 50px 0px;
+}
+.advantages__body {
+	display: flex;
+	justify-content: space-between;
+	margin: 0px -15px;
+	flex-wrap: wrap;
+}
+.advantages__column {
+	flex: 0 1 25%;
+	padding: 0px 15px;
+}
+.advantages__item {
+}
+
+.item-advantages {
+	background-color: #fff;
+	padding: 30px;
+	text-align: center;
+	height: 100%;
+	font-weight: 700;
+}
+.item-advantages > *:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.item-advantages__icon {
+	height: 48px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.item-advantages__number {
+	font-size: 40px;
+	line-height: 142%;
+	letter-spacing: 0.2px;
+}
+.item-advantages__text {
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	color: #737373;
+}
+
+/* ---------------------------------------------------------------------------- */
