--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ body {
 }
 .page_practice {
 }
+.page__whoweare {
+}
 /* ---------------------------------------------------------------------------- */
 .main-block {
 	position: relative;
@@ -569,3 +571,94 @@ body {
 	}
 }
 /* ---------------------------------------------------------------------------- */
+
+.whoweare {
+	background-color: #fff;
+	padding: 100px 0;
+}
+.whoweare__container {
+}
+.whoweare__title-block {
+	margin: 0px 0px 100px 0px;
+}
+.whoweare__body {
+	display: flex;
+	align-items: flex-start;
+}
+.whoweare__video {
+	flex: 0 0 57%;
+	margin: 0px 120px 0px 0px;
+	position: relative;
+	padding: 0px 0px 42.25% 0px;
+}
+.whoweare__video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.whoweare__content {
+	flex: 1 1 auto;
+}
+.whoweare__top {
+	letter-spacing: 0.2px;
+	padding: 20px 0px 0px 0px;
+	margin: 0px 0px 50px 0px;
+}
+.whoweare__title {
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 142%;
+}
+.whoweare__title:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.whoweare__text {
+	font-size: 14px;
+	line-height: 143%;
+	color: #737373;
+}
+.whoweare__items {
+}
+.whoweare__item {
+	padding: 0px 0px 0px 50px;
+	position: relative;
+}
+.whoweare__item {
+}
+
+.whoweare__item:not(:last-child) {
+	margin: 0px 0px 30px 0px;
+}
+.item-whoweare::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 32px;
+	height: 32px;
+}
+.item-whoweare_1::before {
+	background: url("/img/whoweare/1.svg") 0 0 / contain no-repeat;
+}
+.item-whoweare_2::before {
+	background: url("/img/whoweare/2.svg") 0 0 / contain no-repeat;
+}
+.item-whoweare__title {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+}
+.item-whoweare__title:not(:last-child) {
+	margin: 0px 0px 5px 0px;
+}
+.item-whoweare__text {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
