--- a/style.css
+++ b/style.css
@@ -178,6 +178,8 @@ body {
 }
 .page__whoweare {
 }
+.page__partners {
+}
 /* ---------------------------------------------------------------------------- */
 .main-block {
 	position: relative;
@@ -598,7 +600,6 @@ body {
 	width: 100%;
 	height: 100%;
 }
-
 .whoweare__content {
 	flex: 1 1 auto;
 }
@@ -632,6 +633,37 @@ body {
 .whoweare__item:not(:last-child) {
 	margin: 0px 0px 30px 0px;
 }
+@media (max-width: 1040px) {
+	.whoweare__video {
+		margin: 0px 80px 0px 0px;
+	}
+	.whoweare__top {
+		padding: 0;
+	}
+}
+@media (max-width: 992px) {
+	.whoweare__video {
+		margin: 0px 40px 0px 0px;
+	}
+}
+@media (max-width: 767px) {
+	.whoweare__body {
+		flex-wrap: wrap;
+	}
+	.whoweare__video {
+		flex: 1 1 100%;
+		padding: 0px 0px 57% 0px;
+		margin: 0px 0px 20px 0px;
+	}
+	.whoweare__title {
+		font-size: 36px;
+	}
+}
+@media (max-width: 479px) {
+	.whoweare__title {
+		font-size: 30px;
+	}
+}
 .item-whoweare::before {
 	content: "";
 	position: absolute;
@@ -662,3 +694,26 @@ body {
 	letter-spacing: 0.2px;
 	color: #737373;
 }
+
+/* ---------------------------------------------------------------------------- */
+
+.partners {
+	padding: 56px 0px 143px 0px;
+}
+.partners__container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.partners__item {
+	flex: 0 1 16.666%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 75px;
+}
+.partners__item img {
+	max-heigh: 75px;
+}
+/* ---------------------------------------------------------------------------- */
