--- a/style.css
+++ b/style.css
@@ -900,11 +900,28 @@ body {
 	padding: 50px 40px;
 	text-align: center;
 	transition: all 0.3s ease 0s;
+	position: relative;
 }
 .getintouch__item:hover {
 	background-color: #252b42;
-	padding: 80px 40px;
+	/* padding: 80px 40px; */
 	color: #fff;
+}
+.getintouch__item::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	z-index: -1;
+	transition: all 0.3s ease 0s;
+}
+.getintouch__item:hover::before {
+	height: calc(100% + 60px);
+	transform: translateY(-30px);
+	background-color: #252b42;
 }
 
 .getintouch__item *:not(:last-child) {
