--- a/style.css
+++ b/style.css
@@ -185,6 +185,8 @@ body {
 }
 .page__getintouch {
 }
+.page__contact {
+}
 /* ---------------------------------------------------------------------------- */
 .main-block {
 	position: relative;
@@ -905,7 +907,6 @@ body {
 }
 .getintouch__item:hover {
 	background-color: #252b42;
-	/* padding: 80px 40px; */
 	color: #fff;
 }
 .getintouch__item::before {
@@ -997,6 +998,63 @@ body {
 	}
 	.getintouch__header-block {
 		margin: 0px 0px 40px 0px;
+	}
+	.getintouch__item {
+		padding: 30px 20px;
+	}
+}
+/* ---------------------------------------------------------------------------- */
+
+.contact {
+	padding: 40px 0px;
+	background-color: #fff;
+}
+.contact__container {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.contact__content {
+	padding: 0px 20px 0px 0px;
+}
+.contact__title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 133%;
+	letter-spacing: 0.1px;
+}
+.contact__title:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.contact__text {
+	line-height: 143%;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
+.contact__button {
+	min-height: 58px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	padding: 5px 40px;
+	background: #ff7b47;
+	border-radius: 5px;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 200%;
+	text-align: center;
+	letter-spacing: 0.2px;
+}
+@media (max-width: 767px) {
+	.contact {
+		padding: 30px 0px;
+	}
+	.contact__content {
+		margin: 0px 0px 20px 0px;
+	}
+	.contact__title:not(:last-child) {
+		margin: 0px 0px 5px 0px;
 	}
 }
 /* ---------------------------------------------------------------------------- */
