--- a/style.css
+++ b/style.css
@@ -1045,6 +1045,12 @@ body {
 	line-height: 200%;
 	text-align: center;
 	letter-spacing: 0.2px;
+	transition: all 0.3s ease 0s;
+}
+.contact__button:hover {
+	color: #ff7b47;
+	background: #fff;
+	border: 1px solid #ff7b47;
 }
 @media (max-width: 767px) {
 	.contact {
@@ -1058,3 +1064,136 @@ body {
 	}
 }
 /* ---------------------------------------------------------------------------- */
+.footer {
+}
+.footer__top {
+	background-color: #17213c;
+	padding: 50px 0;
+	color: #fff;
+}
+.footer__container {
+}
+.footer__row {
+	display: flex;
+	margin: -15px;
+	flex-wrap: wrap;
+}
+.footer__column {
+	flex: 0 1 16.666%;
+	padding: 15px 15px;
+}
+.footer__column:last-child {
+	flex: 0 1 33.333%;
+}
+.footer__label {
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	margin: 0px 0px 20px 0px;
+}
+.footer__menu {
+}
+.menu-footer {
+}
+.menu-footer__list {
+}
+.menu-footer__item:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.menu-footer__link {
+	display: inline-block;
+	color: inherit;
+	font-weight: 600;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	position: relative;
+}
+.menu-footer__link:hover {
+	text-decoration: underline;
+}
+.footer__column:last-child .menu-footer__link {
+	padding: 0px 0px 0px 34px;
+}
+.footer__column:last-child .menu-footer__link::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 30px;
+	height: 24px;
+}
+.menu-footer__link_phone::before {
+	background: url("/img/footer/01.svg") 0 0 / contain no-repeat;
+}
+.menu-footer__link_adress::before {
+	background: url("/img/footer/02.svg") 0 0 / contain no-repeat;
+}
+.menu-footer__link_email::before {
+	background: url("/img/footer/03.svg") 0 0 / contain no-repeat;
+}
+@media (max-width: 992px) {
+	.footer__column {
+		flex: 0 1 25%;
+	}
+	.footer__column:last-child {
+		flex: 1 1 100%;
+	}
+}
+@media (max-width: 767px) {
+	.footer__top {
+		padding: 35px 0;
+	}
+	.footer__column {
+		flex: 0 1 50%;
+	}
+}
+.footer__bottom {
+	padding: 15px 0;
+}
+.footer__bottom .footer__container {
+	display: flex;
+	flex-direction: column-reverse;
+	align-items: center;
+}
+
+.footer__copy {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	color: #737373;
+	padding: 0px 20px 0px 0px;
+	text-align: center;
+}
+.footer__social {
+	margin: 0px 0px 10px 0px;
+}
+.social {
+	display: flex;
+	align-items: center;
+}
+.social__item:not(:last-child) {
+	margin: 0px 20px 0px 0px;
+	height: 24px;
+	display: flex;
+	align-items: center;
+}
+.social__item img {
+	max-height: 100%;
+}
+@media (min-width: 767px) {
+	.footer__bottom {
+		padding: 25px 0;
+	}
+	.footer__bottom .footer__container {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.footer__copy {
+		text-align-last: left;
+	}
+	.footer__social {
+		margin: 0;
+	}
+}
